# wirecrab

./: .commitlintrc.json  .gitignore  .gitmodules  CONTRIBUTORS.md  Cargo.toml  README.md  REUSE.toml  flake.nix
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/contrib/contrib-codec-json/: Cargo.toml
crates/contrib/contrib-wire-memory/: Cargo.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: codec.rs  document.rs  error.rs  lib.rs  utils.rs  wire.rs
crates/macros/: Cargo.toml
crates/spec/: Cargo.toml
crates/spec/src/: ast.rs  lib.rs  ref_resolver.rs
crates/spec/src/resolver/: mod.rs  tests.rs
