[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/spec",
    "crates/codegen",
    "crates/macros",
    "crates/cli",
    "crates/contrib/contrib-wire-memory",
    "crates/contrib/contrib-codec-json",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
