[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/spec",
    "crates/codegen",
    "crates/macros",
    "crates/cli",
    "crates/contrib/contrib-wire-memory",
    "crates/contrib/contrib-codec-json",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/yourusername/wirecrab"
authors = ["Wirecrab Contributors"]
description = "AsyncAPI toolkit in Rust with multi-language code generation"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.0"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
tera = "1.20"
wirecrab-kernel = { path = "crates/kernel" }
wirecrab-spec = { path = "crates/spec" }
wirecrab-codegen = { path = "crates/codegen" }
