[package]
name = "wirecrab-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[[bin]]
name = "wirecrab"
path = "src/main.rs"

[dependencies]
wirecrab-spec = { path = "../spec" }
wirecrab-codegen = { path = "../codegen" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
