[package]
name = "wirecrab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "wirecrab"
path = "src/main.rs"

[dependencies]
wirecrab-spec = { workspace = true }
wirecrab-codegen = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
