[package]
name = "wirecrab-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "wirecrab_codegen"
path = "src/lib.rs"

[dependencies]
wirecrab-spec = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
