[package]
name = "wirecrab-kernel"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[lib]
name = "wirecrab_kernel"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
