[package]
name = "wirecrab-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["serde/std"]

[lib]
name = "wirecrab_kernel"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bytes = { workspace = true }
