[package]
name = "wirecrab-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
wirecrab-spec = { workspace = true }
