[package]
name = "wirecrab-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "wirecrab_spec"
path = "src/lib.rs"

[dependencies]
kernel = { package = "wirecrab-kernel", path = "../kernel" }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
